--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@google/generative-ai": "^0.24.1",
+    "firebase": "^11.9.1",
     "next": "15.3.3",
     "openai": "^4.0.0",
     "react": "^19.0.0",
